going to modify catregory

--- a/client-app/src/assets/scss/custom/custom.scss
+++ b/client-app/src/assets/scss/custom/custom.scss
@@ -28,13 +28,10 @@
   float: right;
 }
 
-
-
 /* check box*/
-
 ._customCheckbox {
   width: 200px;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
 }
